Laboratorium 4/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instructions
Rule 1     instructions -> instruction
Rule 2     instructions -> instruction instructions
Rule 3     instruction -> block
Rule 4     instruction -> conditional
Rule 5     instruction -> loop
Rule 6     instruction -> statement SEMICOLON
Rule 7     instruction -> error SEMICOLON
Rule 8     statement -> assignment
Rule 9     statement -> flow_keyword
Rule 10    statement -> fun
Rule 11    statement -> return
Rule 12    statement -> print
Rule 13    flow_keyword -> BREAK
Rule 14    flow_keyword -> CONTINUE
Rule 15    block -> CURLYOPEN instructions CURLYCLOSE
Rule 16    block -> CURLYOPEN error CURLYCLOSE
Rule 17    print -> PRINT print_body
Rule 18    print_body -> string
Rule 19    print_body -> expression
Rule 20    print_body -> string COMMA print_body
Rule 21    print_body -> expression COMMA print_body
Rule 22    return -> RETURN expression
Rule 23    return -> RETURN
Rule 24    string -> STRING
Rule 25    conditional -> IF ROUNDOPEN expression ROUNDCLOSE instruction
Rule 26    conditional -> IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
Rule 27    loop -> while
Rule 28    loop -> for
Rule 29    while -> WHILE ROUNDOPEN expression ROUNDCLOSE instruction
Rule 30    for -> FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
Rule 31    fun -> fun_name ROUNDOPEN fun_body ROUNDCLOSE
Rule 32    fun -> fun_name ROUNDOPEN error ROUNDCLOSE
Rule 33    fun_body -> numeric_expression
Rule 34    fun_body -> numeric_expression COMMA fun_body
Rule 35    fun_name -> ZEROS
Rule 36    fun_name -> ONES
Rule 37    fun_name -> EYE
Rule 38    assignment -> assignment_left_side assignment_operator expression
Rule 39    assignment -> assignment_left_side ASSIGN string
Rule 40    assignment -> assignment_left_side ASSIGN matrix
Rule 41    assignment -> assignment_left_side ASSIGN vector
Rule 42    assignment_left_side -> var
Rule 43    assignment_operator -> ASSIGN
Rule 44    assignment_operator -> ADDASSIGN
Rule 45    assignment_operator -> SUBASSIGN
Rule 46    assignment_operator -> MULASSIGN
Rule 47    assignment_operator -> DIVASSIGN
Rule 48    matrix -> SQUAREOPEN matrix_body SQUARECLOSE
Rule 49    matrix_body -> vector
Rule 50    matrix_body -> vector COMMA matrix_body
Rule 51    vector -> SQUAREOPEN vector_body SQUARECLOSE
Rule 52    vector -> SQUAREOPEN SQUARECLOSE
Rule 53    vector_body -> numeric_expression
Rule 54    vector_body -> numeric_expression COMMA vector_body
Rule 55    expression -> comparison_expression
Rule 56    expression -> numeric_expression
Rule 57    expression -> fun
Rule 58    comparison_expression -> numeric_expression L numeric_expression
Rule 59    comparison_expression -> numeric_expression G numeric_expression
Rule 60    comparison_expression -> numeric_expression EQ numeric_expression
Rule 61    comparison_expression -> numeric_expression NEQ numeric_expression
Rule 62    comparison_expression -> numeric_expression GE numeric_expression
Rule 63    comparison_expression -> numeric_expression LE numeric_expression
Rule 64    comparison_expression -> ROUNDOPEN comparison_expression ROUNDCLOSE
Rule 65    numeric_expression -> numeric_expression ADD term
Rule 66    numeric_expression -> numeric_expression SUB term
Rule 67    numeric_expression -> numeric_expression DOTADD term
Rule 68    numeric_expression -> numeric_expression DOTSUB term
Rule 69    numeric_expression -> term
Rule 70    term -> term MUL factor
Rule 71    term -> term DIV factor
Rule 72    term -> term DOTMUL factor
Rule 73    term -> term DOTDIV factor
Rule 74    term -> factor
Rule 75    factor -> FLOATNUM
Rule 76    factor -> INTNUM
Rule 77    factor -> var
Rule 78    factor -> ROUNDOPEN numeric_expression ROUNDCLOSE
Rule 79    factor -> unary_operator
Rule 80    unary_operator -> negation
Rule 81    unary_operator -> transposition
Rule 82    negation -> SUB factor
Rule 83    transposition -> factor TRANSPOSITION
Rule 84    var -> ID
Rule 85    var -> ID SQUAREOPEN fun_body SQUARECLOSE

Terminals, with rules where they appear

ADD                  : 65
ADDASSIGN            : 44
ASSIGN               : 30 39 40 41 43
BREAK                : 13
COMMA                : 20 21 34 50 54
CONTINUE             : 14
CURLYCLOSE           : 15 16
CURLYOPEN            : 15 16
DIV                  : 71
DIVASSIGN            : 47
DOTADD               : 67
DOTDIV               : 73
DOTMUL               : 72
DOTSUB               : 68
ELSE                 : 26
EQ                   : 60
EYE                  : 37
FLOATNUM             : 75
FOR                  : 30
G                    : 59
GE                   : 62
ID                   : 30 84 85
IF                   : 25 26
INTNUM               : 76
L                    : 58
LE                   : 63
MUL                  : 70
MULASSIGN            : 46
NEQ                  : 61
ONES                 : 36
PRINT                : 17
RANGE                : 30
RETURN               : 22 23
ROUNDCLOSE           : 25 26 29 31 32 64 78
ROUNDOPEN            : 25 26 29 31 32 64 78
SEMICOLON            : 6 7
SQUARECLOSE          : 48 51 52 85
SQUAREOPEN           : 48 51 52 85
STRING               : 24
SUB                  : 66 82
SUBASSIGN            : 45
TRANSPOSITION        : 83
WHILE                : 29
ZEROS                : 35
error                : 7 16 32

Nonterminals, with rules where they appear

assignment           : 8
assignment_left_side : 38 39 40 41
assignment_operator  : 38
block                : 3
comparison_expression : 55 64
conditional          : 4
expression           : 19 21 22 25 26 29 38
factor               : 70 71 72 73 74 82 83
flow_keyword         : 9
for                  : 28
fun                  : 10 57
fun_body             : 31 34 85
fun_name             : 31 32
instruction          : 1 2 25 26 26 29 30
instructions         : 2 15 0
loop                 : 5
matrix               : 40
matrix_body          : 48 50
negation             : 80
numeric_expression   : 30 30 33 34 53 54 56 58 58 59 59 60 60 61 61 62 62 63 63 65 66 67 68 78
print                : 12
print_body           : 17 20 21
return               : 11
statement            : 6
string               : 18 20 39
term                 : 65 66 67 68 69 70 71 72 73
transposition        : 81
unary_operator       : 79
var                  : 42 77
vector               : 41 49 50
vector_body          : 51 54
while                : 27

Parsing method: LALR

state 0

    (0) S' -> . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (25) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (26) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (27) loop -> . while
    (28) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (29) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (30) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (38) assignment -> . assignment_left_side assignment_operator expression
    (39) assignment -> . assignment_left_side ASSIGN string
    (40) assignment -> . assignment_left_side ASSIGN matrix
    (41) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (31) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (32) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (17) print -> . PRINT print_body
    (42) assignment_left_side -> . var
    (35) fun_name -> . ZEROS
    (36) fun_name -> . ONES
    (37) fun_name -> . EYE
    (84) var -> . ID
    (85) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    error           shift and go to state 7
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instructions                   shift and go to state 1
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 1

    (0) S' -> instructions .



state 2

    (1) instructions -> instruction .
    (2) instructions -> instruction . instructions
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (25) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (26) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (27) loop -> . while
    (28) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (29) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (30) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (38) assignment -> . assignment_left_side assignment_operator expression
    (39) assignment -> . assignment_left_side ASSIGN string
    (40) assignment -> . assignment_left_side ASSIGN matrix
    (41) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (31) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (32) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (17) print -> . PRINT print_body
    (42) assignment_left_side -> . var
    (35) fun_name -> . ZEROS
    (36) fun_name -> . ONES
    (37) fun_name -> . EYE
    (84) var -> . ID
    (85) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    $end            reduce using rule 1 (instructions -> instruction .)
    CURLYCLOSE      reduce using rule 1 (instructions -> instruction .)
    error           shift and go to state 7
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instruction                    shift and go to state 2
    instructions                   shift and go to state 30
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 3

    (3) instruction -> block .

    error           reduce using rule 3 (instruction -> block .)
    CURLYOPEN       reduce using rule 3 (instruction -> block .)
    IF              reduce using rule 3 (instruction -> block .)
    WHILE           reduce using rule 3 (instruction -> block .)
    FOR             reduce using rule 3 (instruction -> block .)
    BREAK           reduce using rule 3 (instruction -> block .)
    CONTINUE        reduce using rule 3 (instruction -> block .)
    RETURN          reduce using rule 3 (instruction -> block .)
    PRINT           reduce using rule 3 (instruction -> block .)
    ZEROS           reduce using rule 3 (instruction -> block .)
    ONES            reduce using rule 3 (instruction -> block .)
    EYE             reduce using rule 3 (instruction -> block .)
    ID              reduce using rule 3 (instruction -> block .)
    $end            reduce using rule 3 (instruction -> block .)
    CURLYCLOSE      reduce using rule 3 (instruction -> block .)
    ELSE            reduce using rule 3 (instruction -> block .)


state 4

    (4) instruction -> conditional .

    error           reduce using rule 4 (instruction -> conditional .)
    CURLYOPEN       reduce using rule 4 (instruction -> conditional .)
    IF              reduce using rule 4 (instruction -> conditional .)
    WHILE           reduce using rule 4 (instruction -> conditional .)
    FOR             reduce using rule 4 (instruction -> conditional .)
    BREAK           reduce using rule 4 (instruction -> conditional .)
    CONTINUE        reduce using rule 4 (instruction -> conditional .)
    RETURN          reduce using rule 4 (instruction -> conditional .)
    PRINT           reduce using rule 4 (instruction -> conditional .)
    ZEROS           reduce using rule 4 (instruction -> conditional .)
    ONES            reduce using rule 4 (instruction -> conditional .)
    EYE             reduce using rule 4 (instruction -> conditional .)
    ID              reduce using rule 4 (instruction -> conditional .)
    $end            reduce using rule 4 (instruction -> conditional .)
    CURLYCLOSE      reduce using rule 4 (instruction -> conditional .)
    ELSE            reduce using rule 4 (instruction -> conditional .)


state 5

    (5) instruction -> loop .

    error           reduce using rule 5 (instruction -> loop .)
    CURLYOPEN       reduce using rule 5 (instruction -> loop .)
    IF              reduce using rule 5 (instruction -> loop .)
    WHILE           reduce using rule 5 (instruction -> loop .)
    FOR             reduce using rule 5 (instruction -> loop .)
    BREAK           reduce using rule 5 (instruction -> loop .)
    CONTINUE        reduce using rule 5 (instruction -> loop .)
    RETURN          reduce using rule 5 (instruction -> loop .)
    PRINT           reduce using rule 5 (instruction -> loop .)
    ZEROS           reduce using rule 5 (instruction -> loop .)
    ONES            reduce using rule 5 (instruction -> loop .)
    EYE             reduce using rule 5 (instruction -> loop .)
    ID              reduce using rule 5 (instruction -> loop .)
    $end            reduce using rule 5 (instruction -> loop .)
    CURLYCLOSE      reduce using rule 5 (instruction -> loop .)
    ELSE            reduce using rule 5 (instruction -> loop .)


state 6

    (6) instruction -> statement . SEMICOLON

    SEMICOLON       shift and go to state 31


state 7

    (7) instruction -> error . SEMICOLON

    SEMICOLON       shift and go to state 32


state 8

    (15) block -> CURLYOPEN . instructions CURLYCLOSE
    (16) block -> CURLYOPEN . error CURLYCLOSE
    (1) instructions -> . instruction
    (2) instructions -> . instruction instructions
    (3) instruction -> . block
    (4) instruction -> . conditional
    (5) instruction -> . loop
    (6) instruction -> . statement SEMICOLON
    (7) instruction -> . error SEMICOLON
    (15) block -> . CURLYOPEN instructions CURLYCLOSE
    (16) block -> . CURLYOPEN error CURLYCLOSE
    (25) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction
    (26) conditional -> . IF ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction
    (27) loop -> . while
    (28) loop -> . for
    (8) statement -> . assignment
    (9) statement -> . flow_keyword
    (10) statement -> . fun
    (11) statement -> . return
    (12) statement -> . print
    (29) while -> . WHILE ROUNDOPEN expression ROUNDCLOSE instruction
    (30) for -> . FOR ID ASSIGN numeric_expression RANGE numeric_expression instruction
    (38) assignment -> . assignment_left_side assignment_operator expression
    (39) assignment -> . assignment_left_side ASSIGN string
    (40) assignment -> . assignment_left_side ASSIGN matrix
    (41) assignment -> . assignment_left_side ASSIGN vector
    (13) flow_keyword -> . BREAK
    (14) flow_keyword -> . CONTINUE
    (31) fun -> . fun_name ROUNDOPEN fun_body ROUNDCLOSE
    (32) fun -> . fun_name ROUNDOPEN error ROUNDCLOSE
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (17) print -> . PRINT print_body
    (42) assignment_left_side -> . var
    (35) fun_name -> . ZEROS
    (36) fun_name -> . ONES
    (37) fun_name -> . EYE
    (84) var -> . ID
    (85) var -> . ID SQUAREOPEN fun_body SQUARECLOSE

    error           shift and go to state 34
    CURLYOPEN       shift and go to state 8
    IF              shift and go to state 9
    WHILE           shift and go to state 17
    FOR             shift and go to state 18
    BREAK           shift and go to state 21
    CONTINUE        shift and go to state 22
    RETURN          shift and go to state 24
    PRINT           shift and go to state 25
    ZEROS           shift and go to state 27
    ONES            shift and go to state 28
    EYE             shift and go to state 29
    ID              shift and go to state 19

    instructions                   shift and go to state 33
    instruction                    shift and go to state 2
    block                          shift and go to state 3
    conditional                    shift and go to state 4
    loop                           shift and go to state 5
    statement                      shift and go to state 6
    while                          shift and go to state 10
    for                            shift and go to state 11
    assignment                     shift and go to state 12
    flow_keyword                   shift and go to state 13
    fun                            shift and go to state 14
    return                         shift and go to state 15
    print                          shift and go to state 16
    assignment_left_side           shift and go to state 20
    fun_name                       shift and go to state 23
    var                            shift and go to state 26

state 9

    (25) conditional -> IF . ROUNDOPEN expression ROUNDCLOSE instruction
    (26) conditional -> IF . ROUNDOPEN expression ROUNDCLOSE instruction ELSE instruction

    ROUNDOPEN       shift and go to state 35


state 10

    (27) loop -> while .

    error           reduce using rule 27 (loop -> while .)
    CURLYOPEN       reduce using rule 27 (loop -> while .)
    IF              reduce using rule 27 (loop -> while .)
    WHILE           reduce using rule 27 (loop -> while .)
    FOR             reduce using rule 27 (loop -> while .)
    BREAK           reduce using rule 27 (loop -> while .)
    CONTINUE        reduce using rule 27 (loop -> while .)
    RETURN          reduce using rule 27 (loop -> while .)
    PRINT           reduce using rule 27 (loop -> while .)
    ZEROS           reduce using rule 27 (loop -> while .)
    ONES            reduce using rule 27 (loop -> while .)
    EYE             reduce using rule 27 (loop -> while .)
    ID              reduce using rule 27 (loop -> while .)
    $end            reduce using rule 27 (loop -> while .)
    CURLYCLOSE      reduce using rule 27 (loop -> while .)
    ELSE            reduce using rule 27 (loop -> while .)


state 11

    (28) loop -> for .

    error           reduce using rule 28 (loop -> for .)
    CURLYOPEN       reduce using rule 28 (loop -> for .)
    IF              reduce using rule 28 (loop -> for .)
    WHILE           reduce using rule 28 (loop -> for .)
    FOR             reduce using rule 28 (loop -> for .)
    BREAK           reduce using rule 28 (loop -> for .)
    CONTINUE        reduce using rule 28 (loop -> for .)
    RETURN          reduce using rule 28 (loop -> for .)
    PRINT           reduce using rule 28 (loop -> for .)
    ZEROS           reduce using rule 28 (loop -> for .)
    ONES            reduce using rule 28 (loop -> for .)
    EYE             reduce using rule 28 (loop -> for .)
    ID              reduce using rule 28 (loop -> for .)
    $end            reduce using rule 28 (loop -> for .)
    CURLYCLOSE      reduce using rule 28 (loop -> for .)
    ELSE            reduce using rule 28 (loop -> for .)


state 12

    (8) statement -> assignment .

    SEMICOLON       reduce using rule 8 (statement -> assignment .)


state 13

    (9) statement -> flow_keyword .

    SEMICOLON       reduce using rule 9 (statement -> flow_keyword .)


state 14

    (10) statement -> fun .

    SEMICOLON       reduce using rule 10 (statement -> fun .)


state 15

    (11) statement -> return .

    SEMICOLON       reduce using rule 11 (statement -> return .)


state 16

    (12) statement -> print .

    SEMICOLON       reduce using rule 12 (statement -> print .)


state 17

    (29) while -> WHILE . ROUNDOPEN expression ROUNDCLOSE instruction

    ROUNDOPEN       shift and go to state 36


state 18

    (30) for -> FOR . ID ASSIGN numeric_expression RANGE numeric_expression instruction

    ID              shift and go to state 37


state 19

    (84) var -> ID .
    (85) var -> ID . SQUAREOPEN fun_body SQUARECLOSE

    ASSIGN          reduce using rule 84 (var -> ID .)
    ADDASSIGN       reduce using rule 84 (var -> ID .)
    SUBASSIGN       reduce using rule 84 (var -> ID .)
    MULASSIGN       reduce using rule 84 (var -> ID .)
    DIVASSIGN       reduce using rule 84 (var -> ID .)
    TRANSPOSITION   reduce using rule 84 (var -> ID .)
    MUL             reduce using rule 84 (var -> ID .)
    DIV             reduce using rule 84 (var -> ID .)
    DOTMUL          reduce using rule 84 (var -> ID .)
    DOTDIV          reduce using rule 84 (var -> ID .)
    L               reduce using rule 84 (var -> ID .)
    G               reduce using rule 84 (var -> ID .)
    EQ              reduce using rule 84 (var -> ID .)
    NEQ             reduce using rule 84 (var -> ID .)
    GE              reduce using rule 84 (var -> ID .)
    LE              reduce using rule 84 (var -> ID .)
    ADD             reduce using rule 84 (var -> ID .)
    SUB             reduce using rule 84 (var -> ID .)
    DOTADD          reduce using rule 84 (var -> ID .)
    DOTSUB          reduce using rule 84 (var -> ID .)
    SEMICOLON       reduce using rule 84 (var -> ID .)
    COMMA           reduce using rule 84 (var -> ID .)
    ROUNDCLOSE      reduce using rule 84 (var -> ID .)
    SQUARECLOSE     reduce using rule 84 (var -> ID .)
    RANGE           reduce using rule 84 (var -> ID .)
    error           reduce using rule 84 (var -> ID .)
    CURLYOPEN       reduce using rule 84 (var -> ID .)
    IF              reduce using rule 84 (var -> ID .)
    WHILE           reduce using rule 84 (var -> ID .)
    FOR             reduce using rule 84 (var -> ID .)
    BREAK           reduce using rule 84 (var -> ID .)
    CONTINUE        reduce using rule 84 (var -> ID .)
    RETURN          reduce using rule 84 (var -> ID .)
    PRINT           reduce using rule 84 (var -> ID .)
    ZEROS           reduce using rule 84 (var -> ID .)
    ONES            reduce using rule 84 (var -> ID .)
    EYE             reduce using rule 84 (var -> ID .)
    ID              reduce using rule 84 (var -> ID .)
    SQUAREOPEN      shift and go to state 38


state 20

    (38) assignment -> assignment_left_side . assignment_operator expression
    (39) assignment -> assignment_left_side . ASSIGN string
    (40) assignment -> assignment_left_side . ASSIGN matrix
    (41) assignment -> assignment_left_side . ASSIGN vector
    (43) assignment_operator -> . ASSIGN
    (44) assignment_operator -> . ADDASSIGN
    (45) assignment_operator -> . SUBASSIGN
    (46) assignment_operator -> . MULASSIGN
    (47) assignment_operator -> . DIVASSIGN

    ASSIGN          shift and go to state 40
    ADDASSIGN       shift and go to state 41
    SUBASSIGN       shift and go to state 42
    MULASSIGN       shift and go to state 43
    DIVASSIGN       shift and go to state 44

    assignment_operator            shift and go to state 39

state 21

    (13) flow_keyword -> BREAK .

    SEMICOLON       reduce using rule 13 (flow_keyword -> BREAK .)


state 22

    (14) flow_keyword -> CONTINUE .

    SEMICOLON       reduce using rule 14 (flow_keyword -> CONTINUE .)


state 23

    (31) fun -> fun_name . ROUNDOPEN fun_body ROUNDCLOSE
    (32) fun -> fun_name . ROUNDOPEN error ROUNDCLOSE

    ROUNDOPEN       shift and go to state 45


state 24
